QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog


GIT HEAD

- Added application keywords to freedesktop.org's AppData.


0.3.0  2015-09-21  Summer'15 release frenzy.

- System tray icon now blinks on network send/receive activity.

- Prefer Qt5 over Qt4 by default with configure script.

- Complete rewrite of Qt4 vs. Qt5 configure builds.

- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.


0.2.1  2015-03-23  Pre-LAC2015 pre-season release.

- Reset (to network defaults) button added to options dialog,
  which also gets some layout reform.

- Added application description as freedesktop.org's AppData.

- Previously hard-coded UDP/IP multicast address (225.0.0.37) is
  now an user configurable option.


0.2.0  2014-06-19  Headless finally.

- A man page has beed added (making up Alessio Treglia's work on
  debian, thanks).

- First attempt to allow a headless application run mode, without
  GUI or system-tray icon accessibility, with all options given 
  as command line arguments.

- Allow the build system to include an user specified LDFLAGS.


0.1.3  2013-12-31  A fifth of a Jubilee.

- More preparations for Qt5 configure build.

- Added missing blank spaces on some warning messages text lines.

- Preparations for Qt5 migration.


0.1.2  2012-05-22  JACK-MIDI crashfix release.

- JACK MIDI in-bound buffering was originally flawed and often the
  cause for severe random crashes, mostly due to memory corruption,
  now hopefully fixed.

- Changed order of JACK MIDI and UDP socket initialization, hoping
  the later is always owned by the current genuine process.

- JACK MIDI interface were sinking all incoming events into the
  the first port, now fixed (heads up from Chris Goddard, thanks).

- Make(ing) -jN parallel builds now available for the masses.

- Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir.
